@@ -1,3 +1,15 @@
+2007-09-26  Vitaly Alexeev <tishka92@yahoo.com>
+
+		* gameswf/gameswf.h
+		* gameswf/gameswf_as_sprite.cpp
+		* gameswf/gameswf_as_sprite.h
+		* gameswf/gameswf_sprite.cpp
+		* gameswf/gameswf_sprite.h
+		* gameswf/gameswf_sprite_def.h
+		* gameswf/samples/test_attachMovie.fla
+		* gameswf/samples/test_attachMovie.swf
+		Added attachMovie() method
+		
 2007-09-25  Vitaly Alexeev <tishka92@yahoo.com>
 
 		* gameswf/gameswf.h
